# moltenvk-angle

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build.gradle.kts  cmake_vs2017_flimper.bat
.github/workflows/: main.yml
CMake/Modules/: FindUrho3D.cmake  UrhoCommon.cmake
DotNet/: Notes.txt
DotNet/AndroidEnvironment/: AndroidEnvironment.cs  build-android-env.bat  build-android-env.sh
DotNet/Bindings/: build-android-bindings.bat  build-android-bindings.sh  build-desktop-bindings.bat  build-desktop-bindings.sh  build-editor-bindings.bat  build-editor-bindings.sh  events.txt  (+3 more)
Source/: CMakeLists.txt
Templates/: CMakeLists.txt
android/launcher-app/: CMakeLists.txt  build.gradle.kts
android/launcher-app/src/main/: AndroidManifest.xml
android/launcher-app/src/main/java/com/github/plugin/: AdmobPlugin.java
android/launcher-app/src/main/java/com/github/urho3d/launcher/: LauncherActivity.kt  MainActivity.kt
android/launcher-app/src/main/java/com/urho3d/plugin/: AdmobPlugin.java
android/launcher-app/src/main/java/io/urho3d/launcher/: LauncherActivity.kt
script/: build_android.bat  build_android_dotnet_libs.sh  build_android_gles3.bat  build_emscripten_dotnet_dylib.sh  build_emscripten_dotnet_dylib_filesystem.sh  build_install_android_libs.sh  build_install_dotnet_macos.sh  build_install_urho_assemblies.sh  build_install_urhonet_android_libs.sh  build_install_urhonet_editor_macos.sh  build_install_urhonet_macos_ios_android_web.sh  build_install_web_dotnet_macos.sh  build_ios_dotnet_libs.sh  build_windows_tools.ps1  cmake_ios.sh  cmake_ios_dotnet_lib.sh  cmake_ios_dotnet_metal.sh  cmake_ios_dotnet_metal_lib.sh  cmake_ios_metal.sh  cmake_linux_dotnet_so.sh  cmake_uwp.bat  cmake_vs2017.bat  cmake_vs2017_dll.bat  cmake_vs2017_flimper_shared.bat  cmake_vs2017_hdll.bat  cmake_vs2017_opengl.bat  cmake_vs2019.bat  cmake_vs2019_dll.bat  cmake_vs2019_dotnet.bat  cmake_vs2019_dotnet_dll.bat  cmake_vs2019_flimper.bat  cmake_vs2019_flimper_shared.bat  cmake_vs2019_opengl.bat  cmake_vs2019_shared.bat  cmake_vs2019_win_console.bat  cmake_xcode_cling.sh  cmake_xcode_dotnet.sh  cmake_xcode_dotnet_dylib.sh  cmake_xcode_dotnet_editor_dylib.sh  cmake_xcode_dotnet_metal.sh  (+9 more)
(+1435 files in other folders)
